--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
@@ -25,9 +26,13 @@
     "eslint-plugin-react": "^6.2.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "material-ui": "^0.16.0",
     "node-sass": "^3.10.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0",
     "sass-loader": "^4.0.2",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.2"
